Fix for background mobile jump

--- a/index.css
+++ b/index.css
@@ -14,7 +14,7 @@ body {
   margin-right: auto;
   max-width: 800px; }
 
-.background {
+#background {
   background-image: url('images/fountains.jpg');
   background-position: left bottom;
   background-repeat: no-repeat;
